--- a/express-server/package.json
+++ b/express-server/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon /src/index.js",
+    "dev": "nodemon /src/index.mjs",
     "prod": "echo \"bla bla black sheep no we don't have prod \"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,7 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
+    "@prisma/client": "^5.20.0",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.21.0",
+    "express-session": "^1.18.0",
+    "express-validator": "^7.2.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "prisma": "^5.20.0"
