--- a/express-server/package.json
+++ b/express-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon /src/index.mjs",
+    "dev": "nodemon src/index.mjs",
     "prod": "echo \"bla bla black sheep no we don't have prod \"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
