--- a/express-server/package.json
+++ b/express-server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "express-validator": "^7.2.0",
